# rust-js-light

./: Cargo.toml  README.md
resources/: ex1.js_new  ex1.json
src/: ast.rs  lang.pest  main.rs  parser.rs  runner.rs
src/parser/: ast.rs  lang.pest  mod.rs
src/runner/: builtins.rs  mod.rs  value.rs
