[package]
name = "js-light"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "js-light"
path = "src/main.rs"

[dependencies]
pest = "2.0"
pest_derive = "2.0"
itertools = "0.8.2"
clap = { version = "4.5.7", features = ["derive"] }
anyhow = "1.0.86"
thiserror = "1.0.30"
